fixed alignment for portfolio images

--- a/Assets/css/styles.css
+++ b/Assets/css/styles.css
@@ -63,7 +63,7 @@ nav a {
 
 .card {
     margin: 30px 5px;
-    flex-basis: 33%;
+    flex-basis: 25%;
 }
 
 .big-card a img{
